style.css
/* ... */
.kmontagetext button a{
    text-decoration: none;
    color: black;
}

.kmontagetext button:hover{
    transform: scale(0.95);
    cursor: pointer;
}

.kmontage img{
    height: 400px;
    width: auto;
    padding-left: 10px;
}

.entrümpelung{
    display: flex; 
    flex-direction: row;
    margin-top: 180px;
    align-items: center;
    
}

.entrümpelungtext{
    display: flex;
    font-family: "Montserrat";
    flex-direction: column;
}

.entrümpelungtext h3{
    font-weight: 300;
    font-size: 2em;
    text-transform: uppercase;
    margin-top: -7px;
}

.entrümpelungtext hr{
    width: 100%;
    margin-top: 10px;
    background: black;
    height: 1px;
    border: none;
}

.entrümpelungtext p{
    white-space: nowrap;
    margin-top: 10px;
}


.entrümpelungtext button{
    margin-top: 200px;
    padding: 10px;
    width: 150px;
    background-color: #fca655;
    color: black;
    border: none;
    border-radius: 5px;
    font-family: "Montserrat";
    font-size: 0.7em;
    text-transform: uppercase;
    transition: 0.3s ease-in-out;
}

.entrümpelungtext button a{
    text-decoration: none;
    color: black;
}

.entrümpelungtext button:hover{
    transform: scale(0.95);
    cursor: pointer;
}

.entrümpelung img{
    height: 400px;
    width: auto;
    padding-left: 10px;
}

.überuns{
    display: flex; 
    flex-direction: row;
    margin-top: 180px;
    align-items: center;
    
}

.überunstext{
    display: flex;
    font-family: "Montserrat";
    flex-direction: column;
}

.überunstext h3{
    font-weight: 300;
    font-size: 2em;
    text-transform: uppercase;
    margin-top: -7px;
}

.überunstext hr{
    width: 100%;
    margin-top: 10px;
    background: black;
    height: 1px;
    border: none;
}

.überunstext p{
    white-space: nowrap;
    margin-top: 10px;
}


.überunstext button{
    margin-top: 200px;
    padding: 10px;
    width: 150px;
    background-color: #fca655;
    color: black;
    border: none;
    border-radius: 5px;
    font-family: "Montserrat";
    font-size: 0.7em;
    text-transform: uppercase;
    transition: 0.3s ease-in-out;
}

.überunstext button a{
    text-decoration: none;
    color: black;
}

.überunstext button:hover{
    transform: scale(0.95);
    cursor: pointer;
}

.überuns img{
    height: 400px;
    width: auto;
    padding-left: 10px;
}

/*====Footer====*/

#bottomnavbar{
    display: flex;
    justify-content: center;
    flex-direction: row;
    width: 100%;
    height: 180px;
    background-color: rgb(194, 194, 194);
    margin-top: -70px;
    padding: 0 360px;
    gap: 300px;
    font-family: "Montserrat";
    font-size: 0.9rem;
}

.links{
    display: flex;
    flex-direction: column;
    margin-top: 20px;
    margin-left: -100px;
}

.links a{
    color: white;
    text-decoration: none;
}

.links a:hover{
    text-decoration: underline 1px white;
}

.icons{
    display: flex;
    margin-top: 20px;
    gap: 5px;

}

.icons img{
    height: 40px;
    width: auto;
}

.icons a{
    transition: ease-in-out 0.3s;
}

.icons a:hover{
    transform: scale(1.1);
}

/*====Media Queries====*/


@media screen and (max-width: 365px){
    br{
        display: none;
    }

    header{
        height: 70px;
    }

    .brand{
        flex-direction: column;
        margin-left: -10px;
    }

    .brand img{
        height: 35px;
        margin-left: -120px;
    }

    .brand h1{
        font-size: 1.3rem;
        margin-left: 0px;
        margin-top: -7px;
    }

    header nav{
        display: none;
    }

    #burger-nav{
        display: block;
    }

    .mobile-menu{
        top: 65px;
    }

    .mainbody{
        padding: 40px;
        margin-top: -30px;
        margin-bottom: 200px;
    }

    .mainbody h1{
        white-space: normal;
        margin-top: 40px;
        font-size: 2em;
    }

    .mainbody h3{
        white-space: normal;
        font-size: 1.4em;
        margin-top: 40px;
    }

    .mainbody p{
        white-space: normal;
        font-size: 0.9em;
    }

    .mainbody button{
        margin-top: 10px;
        height: 40px;
        width: 100%;
        font-size: 0.8em;
    }

    .mainbody img{
        margin-top: 10px;
        float: center;
        height: 300px;
        width: auto;

    }

    .transport{
        flex-direction: column;
        margin-top: 30px;
    }

    .montage{
        flex-direction: column;
        margin-top: 30px;
    }
    
    .überuns{
        flex-direction: column;
        margin-top: 30px;
    }

    #bottomnavbar{
        flex-direction: column;
        gap: 10px;
        padding: 0 20px;
    }

    .links{
        margin-left: 0px;
    }
}
/* ... */

